--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-tactile
+
+title: Welcome to the Felix Singerman's homepage!
+discription: Feel free to bookmark this page to keep an eye on my project updates. 
