--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-slate
 
 title: Welcome to Felix Singerman's Personal Website!
 discription: Feel free to bookmark this page to keep an eye on my project updates. 
